--- a/templates/admin.html
+++ b/templates/admin.html
@@ -98,7 +98,7 @@
                     {% for user in users %}
                     <tr>
                         <td>{{ user[0] }}</td>
-                        <td>{% if user[0] == 'om' %}[Unable to fetch from database]{% else %}{{ user[1] }}{% endif %}</td>
+                        <td>{% if user[0] == 'cyscom' %}[Unable to fetch from database]{% else %}{{ user[1] }}{% endif %}</td>
                         <td>{{ 'Yes' if user[2] else 'No' }}</td>
                     </tr>
                     {% endfor %}
