--- a/templates/docs.html
+++ b/templates/docs.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Internal Documentation - CTF Challenge</title>
+    <title>Internal Documentation (Restricted)</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         :root {
